<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context=".MainActivity">

  <EditText
    android:id="@+id/editText_numberOne"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/type_operand_one_hint"
    android:inputType="numberDecimal"
    android:importantForAutofill="no" />

  <EditText
    android:id="@+id/editText_numberTwo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/type_operand_two_hint"
    android:inputType="numberDecimal"
    android:importantForAutofill="no" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/button_addition"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onAddition"
      android:text="@string/button_addition_text"/>

    <Button
      android:id="@+id/button_subtraction"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toEndOf="@id/button_addition"
      android:onClick="onSubtraction"
      android:text="@string/button_subtraction_text"/>

    <Button
      android:id="@+id/button_multiplication"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/button_addition"
      android:onClick="onMultiplication"
      android:text="@string/button_multiplication_text"/>

    <Button
      android:id="@+id/button_division"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/button_addition"
      android:layout_toEndOf="@id/button_addition"
      android:onClick="onDivision"
      android:text="@string/button_division_text"/>


  </RelativeLayout>

  <TextView
    android:id="@+id/textView_result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"/>

</LinearLayout>